--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pushreceiver"
-        minSdk 24
+        minSdk 34
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -46,4 +46,8 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation libs.material.v1110
+
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.logging.interceptor
 }
